--- a/easyweb/src/main/res/layout/web.xml
+++ b/easyweb/src/main/res/layout/web.xml
@@ -69,8 +69,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adContentView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/splash">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/ad"
