--- a/easyweb/src/main/res/xml/file_paths.xml
+++ b/easyweb/src/main/res/xml/file_paths.xml
@@ -5,7 +5,7 @@
         path="."/>
     <external-path
         name="files_root"
-        path="Android/data/com.lax.booth/"/>
+        path="Android/data/com.lax.ezweb/"/>
     <external-path
         name="external_storage_root"
         path="."/>
