--- a/easyweb/src/main/res/layout/web.xml
+++ b/easyweb/src/main/res/layout/web.xml
@@ -64,6 +64,13 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/loadingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/progress_loading" />
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
